# trading_v2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README  README.md  backtest_main.py  base_frame.py  main.py  pyproject.toml
tframe/: base_frame.py  base_strategy.py  tframe.py  tframe_factory.py
tframe-frontend/: desing.md
tframe-frontend/tframe-frontend/: README.md  package.json  pnpm-lock.yaml
tframe-gateway/: .dockerignore  DOCKER_README.md  README.md  debug.sh  dockerfile  go.mod  go.sum
tframe-gateway/configs/: config.yaml
tframe-strategy/tframe/: base_strategy.py  tframe.py  tframe_factory.py
tframe-strategy/tframe-llm/: config.py  finance-news.py
tframe/accontinfo/: backtest_accountinfo.py  backtest_order_validator.py  backtest_timemanager.py  base_accontinfo.py  eastmoney_accontinfo.py
tframe/common/: config_reader.py  crawler_jrj_1m.py  eastmoney_common.py  tushare_global.py
tframe/session/: base_session.py  eastmoney_session.py
tframe/stockdata/: base_stockbars.py  base_stockdata.py  local_stockdata.py
tframe/strategyinfo/: backtesting_strategyinfo.py  base_strategy.py  base_strategyinfo.py  forwardtesting_strategyinfo.py
tframe/timemanager/: backtest_timemanager.py  base_timemanager.py  eastmoney_timemanager.py
tools/data/: autorun_1d.sh  autorun_1m.sh  imoprt_stock_1m_data.py  import_stock_1d_data.py  import_stock_1m_data.py  import_stock_factor_data.py  import_stock_realtime_1d_list.py  import_stock_realtime_1m_list.py  tmp.py
tools/news-crawler/: README.md  sina_finance_crawler.py  sina_finance_crawler_maintenance_guide.md
(+59 files in other folders)
