[tool.poetry]
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
lxml = "^5.3.0"
requests = "^2.32.3"
ddddocr = "^1.5.6"
pyppeteer = "^2.0.0"
colorlog = "^6.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
